<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/user"
            android:title="@string/menu_perfil" />
    </group>
    <item android:title="@string/menu_produtos">
        <menu>
            <item
                android:id="@+id/nav_produto"
                android:icon="@drawable/produtos"
                android:title="@string/menu_produtos" />
        </menu>
    </item>
    <item android:title="Vendas">
        <menu>
            <item
                android:id="@+id/nav_vendas"
                android:icon="@drawable/shop"
                android:title="@string/menu_vendas" />
            <item
                android:id="@+id/nav_pesquisa_vendas"
                android:icon="@drawable/procurar"
                android:title="@string/menu_vendas_pesquisa" />
            <item
                android:id="@+id/nav_devolver"
                android:icon="@drawable/devolver"
                android:title="@string/menu_devolver_produto" />
        </menu>
    </item>
    <item android:title="@string/menu_nota">
        <menu>
            <item
                android:id="@+id/nav_gerar_recibo"
                android:icon="@drawable/cupom"
                android:title="@string/menu_recibo" />
            <item
                android:id="@+id/nav_gerar_nota"
                android:icon="@drawable/cupom"
                android:title="@string/menu_nota_venda" />
        </menu>
    </item>
    <item android:title="@string/menu_caixa">
        <menu>
            <item
                android:id="@+id/nav_caixa_abrir"
                android:icon="@drawable/abrir_caixa"
                android:title="@string/menu_caixa_abrir" />
            <item
                android:id="@+id/nav_caixa_despesas"
                android:icon="@drawable/ic_despesa"
                android:title="@string/menu_caixa_despesas" />

        </menu>
    </item>
    <item android:title="@string/menu_servico">
        <menu>
            <item
                android:id="@+id/nav_add_os"
                android:icon="@drawable/abrir_caixa"
                android:title="@string/menu_add_servico" />
            <item
                android:id="@+id/nav_os_hoje"
                android:icon="@drawable/fechar_caixa"
                android:title="@string/menu_listar_servico" />
            <item
                android:id="@+id/nav_oss"
                android:icon="@drawable/ic_despesa"
                android:title="@string/menu_listar_servico_realizados" />

        </menu>
    </item>
    <item android:title="Login">
        <menu>
            <item
                android:id="@+id/nav_sair"
                android:title="Sair" />

        </menu>
    </item>

</menu>
